Centrado el contenido.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="/estilos.css">
 </head>
 <body class="">
-    <h1>Dark Mode</h1>
+    <div class="container">
+        <h1>Dark Mode</h1>
 
-    <button id="btnCambiar">Cambiar tema</button>
+        <button id="btnCambiar">Cambiar tema</button>
+    </div>
+
 
     <script src="/app.js"></script>
 </body>
